--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+### database
+spring.datasource.url=jdbc:mysql://localhost:3306/todo_list_api
+spring.datasource.username=spring
+spring.datasource.password=spring
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.thymeleaf.cache=false
+server.port=8081
 
+
+###Logging
+spring.main.banner-mode=off
+logging.level.root=warn
+logging.level.org.hibernate.SQL = debug
+logging.level.org.hibernate.orm.jdbc.bind = trace
